--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Trabajo 05</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <p>hola</p>
+    <script src = "/chat.js"></script>
   </body>
 </html>
