--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
-    <p>hola</p>
-    <script src = "/chat.js"></script>
+    <div id="mario-chat">
+      <div id="chat-window">
+        <div id="output">
+
+        </div>
+      </div>
+      <input id="handle" type="text" placeholder="Handle"/>
+      <input id="message" type="text" placeholder="Message"/>
+      <button id="send">Send</button>
+    </div>
+    <script src= "/chat.js"></script>
   </body>
 </html>
